# BattleBeyz-prototype

./: .gitignore  CMakeLists.txt  README.md  Units.txt  changelog.txt
assets/shaders/: background.fs  background.vs  object.fs  object.vs
doxydocs/html/: _beyblade_8cpp.html  _beyblade_8h.html  _beyblade_8h_source.html  _bounding_box_8cpp.html  _bounding_box_8h.html  _bounding_box_8h_source.html  _buffers_8cpp.html  _buffers_8h.html  _buffers_8h_source.html  _callback_data_8h.html  _callback_data_8h_source.html  _callbacks_8cpp.html  _callbacks_8h.html  _callbacks_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _game_control_8h.html  _game_control_8h_source.html  _game_object_8h.html  _game_object_8h_source.html  _initialize_8cpp.html  _initialize_8h.html  _initialize_8h_source.html  _physics_8cpp.html  _physics_8h.html  _physics_8h_source.html  _physics_world_8cpp.html  _physics_world_8h.html  _physics_world_8h_source.html  _quad_renderer_8cpp.html  _quad_renderer_8h.html  _quad_renderer_8h_source.html  _r_e_a_d_m_e_8md.html  _rigid_body_8cpp.html  _rigid_body_8h.html  _rigid_body_8h_source.html  _shader_path_8h.html  _shader_path_8h_source.html  _shader_program_8cpp.html  (+90 more)
doxydocs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_2.js  classes_c.js  defines_4.js  files_0.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_5.js  functions_6.js  functions_8.js  functions_b.js  functions_d.js  functions_e.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_2.js  variables_5.js  variables_6.js  variables_a.js  (+2 more)
src/: Beyblade.cpp  Beyblade.h  BoundingBox.cpp  BoundingBox.h  Buffers.cpp  Buffers.h  CallbackData.h  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  GameControl.h  GameObject.h  Initialize.cpp  Initialize.h  Physics.cpp  Physics.h  PhysicsWorld.cpp  PhysicsWorld.h  QuadRenderer.cpp  QuadRenderer.h  RigidBody.cpp  RigidBody.h  ShaderPath.h  ShaderProgram.cpp  ShaderProgram.h  ShaderSource.cpp  ShaderSource.h  Stadium.cpp  Stadium.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp
src/RigidBodies/: BeybladeBody.cpp  BeybladeBody.h  BeybladeParts.h  RandomDistribution.h  StadiumBody.cpp  StadiumBody.h
